<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.pemacy</groupId>
    <artifactId>metalpet</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <name>Metalpet</name>
    <description>Metalpet is an application that performs file system operations described in a JSON file.</description>
    <url>https://github.com/peterjohansen/metalpet</url>
    <inceptionYear>2018</inceptionYear>

    <developers>
        <developer>
            <name>Peter André Johansen</name>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <modules>
		<module>metalpet-cli</module>
        <module>metalpet-common</module>
        <module>metalpet-model</module>
        <module>metalpet-service</module>
    </modules>

    <scm>
        <connection>git@github.com:peterjohansen/metalpet.git</connection>
        <developerConnection>git@github.com:peterjohansen/metalpet.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/peterjohansen/metalpet</url>
    </scm>

	<issueManagement>
		<system>Gitlab</system>
		<url>https://github.com/peterjohansen/metalpet</url>
	</issueManagement>

    <properties>
        <java.version>12</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<commons-cli.version>1.4</commons-cli.version>
		<guava.version>28.0-jre</guava.version>
		<hamcrest.version>2.1</hamcrest.version>
		<hibernate-validator.version>6.0.17.Final</hibernate-validator.version>
		<immutables.version>2.7.5</immutables.version>
		<jackson.version>2.9.9</jackson.version>
		<javax.el.version>3.0.0</javax.el.version>
		<junit-jupiter-api.version>5.5.0</junit-jupiter-api.version>
		<logback.version>1.3.0-alpha4</logback.version>
		<maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
		<mockito.version>2.0.2-beta</mockito.version>
		<slf4j.version>2.0.0-alpha0</slf4j.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
	</properties>

    <dependencyManagement>
        <dependencies>
			<dependency>
				<groupId>org.pemacy</groupId>
				<artifactId>metalpet-cli</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pemacy</groupId>
				<artifactId>metalpet-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pemacy</groupId>
				<artifactId>metalpet-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pemacy</groupId>
				<artifactId>metalpet-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
			<dependency>
				<groupId>org.immutables</groupId>
				<artifactId>value</artifactId>
				<version>${immutables.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation-api.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${commons-cli.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-guava</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-jupiter-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${hamcrest.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate-validator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>javax.el</artifactId>
				<version>${javax.el.version}</version>
			</dependency>
		</dependencies>
    </dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<dependency>
								<groupId>org.immutables</groupId>
								<artifactId>value</artifactId>
							</dependency>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
